syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message UnlockTransPointReq {
	uint32 point_id = 7;
	uint32 scene_id = 6;
}